implements currently ugly grid, displays zeros as zeros

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>
-  {{title}}
+  Sudoku
 </h1>
+<app-make-grid [childGridList]="currentGridList" (clickSender)="editSquare($event)"></app-make-grid>
