--- a/src/app/make-grid/make-grid.component.css
+++ b/src/app/make-grid/make-grid.component.css
@@ -1,7 +1,7 @@
 .square {
   width: 11%;
-  height: 11%;
+  height: 100px;
   border: 1px solid black;
   text-align: center;
-  font-size: 50;
+  font-size: 70px;
 }
