--- a/src/app/make-grid/make-grid.component.html
+++ b/src/app/make-grid/make-grid.component.html
@@ -1,7 +1,6 @@
 <div class="container">
    <div class="row">
       <div *ngFor="let currentSquare of childGridList" class="square" >
-        <div *ngIf="{{currentSquare.value}}; else elseBlock">{{currentSquare.value}}</div>
-        <ng-template #elseBlock> </ng-template>
+        <div *ngIf="{{currentSquare.value}}">{{currentSquare.value}}</div>
    </div>
 </div>
