attempts input acceptance, not yet fnctional

--- a/src/app/make-grid/make-grid.component.html
+++ b/src/app/make-grid/make-grid.component.html
@@ -2,6 +2,9 @@
    <div class="row">
       <div *ngFor="let currentSquare of childGridList" class="square" >
         <div *ngIf=currentSquare.value>{{currentSquare.value}}</div>
+        <div *ngIf="selectedSquare">
+          <input type="number" [(ngModel)]="selectedSquare.value" >{{currentSquare.value}}<br>
+        </div>
       </div>
    </div>
 </div>
