--- a/src/app/make-grid/make-grid.component.html
+++ b/src/app/make-grid/make-grid.component.html
@@ -2,7 +2,7 @@
    <div class="row">
       <div *ngFor="let currentSquare of childGridList" class="square" >
         <div *ngIf=currentSquare.value, else elseBlock>{{currentSquare.value}}</div>
-        <ng-template #elseBlock (click)="squareClicked(squareToEdit)"> </ng-template>
+        <ng-template #elseBlock (click)="squareClicked(currentSquare)"> </ng-template>
       </div>
    </div>
 </div>
