--- a/src/app/make-grid/make-grid.component.html
+++ b/src/app/make-grid/make-grid.component.html
@@ -1,13 +1,10 @@
 <div class="container">
    <div class="row">
       <div *ngFor="let currentSquare of childGridList" class="square" >
-        <div *ngIf=currentSquare.value, else elseBlock>{{currentSquare.value}}</div>
-        <ng-template #elseBlock>
           <form>
-            <input [(ngModel)]="currentSquare.value" type="number">
-            <label> </label>
+            <input [(ngModel)]="currentSquare.value" type="number" name = "0">
+            <label>{{currentSquare.value}}</label>
           </form>
-        </ng-template>
       </div>
    </div>
 </div>
