--- a/src/app/make-grid/make-grid.component.html
+++ b/src/app/make-grid/make-grid.component.html
@@ -2,7 +2,11 @@
    <div class="row">
       <div *ngFor="let currentSquare of childGridList" class="square" >
         <div *ngIf="currentSquare == childSelectedSquare; else elseBlock">X</div>
-        <ng-template #elseBlock><div (click)="squareClicked(currentSquare)">{{currentSquare.value}}</div></ng-template>
+        <ng-template #elseBlock>
+          <div (click)="squareClicked(currentSquare)">
+            <div *ngIf="currentSquare">{{currentSquare.value}}</div>
+          </div>
+        </ng-template>
       </div>
    </div>
 </div>
