new problem identified - cannot click to edit blank squares

--- a/src/app/make-grid/make-grid.component.html
+++ b/src/app/make-grid/make-grid.component.html
@@ -4,7 +4,9 @@
         <div *ngIf="currentSquare == childSelectedSquare; else elseBlock">X</div>
         <ng-template #elseBlock>
           <div (click)="squareClicked(currentSquare)">
-            <div *ngIf="currentSquare">{{currentSquare.value}}</div>
+            <!-- <div *ngIf="currentSquare.value"> -->
+              {{currentSquare.value}}
+            <!-- </div> -->
           </div>
         </ng-template>
       </div>
