true-false for exploration

--- a/src/app/make-grid/make-grid.component.html
+++ b/src/app/make-grid/make-grid.component.html
@@ -5,7 +5,7 @@
         <ng-template #elseBlock>
           <div (click)="squareClicked(currentSquare)">
             <!-- <div *ngIf="currentSquare.value"> -->
-              {{currentSquare.value}}
+              {{currentSquare.explored}}
             <!-- </div> -->
           </div>
         </ng-template>
