--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <h1>
-  Sudoku
+  Minesweeper
 </h1>
 <app-make-grid [childGridList]="currentGridList" [childSelectedSquare]="selectedSquare" (clickSender)="squareToEdit($event)"></app-make-grid>
