--- a/src/app/make-grid/make-grid.component.html
+++ b/src/app/make-grid/make-grid.component.html
@@ -1,7 +1,7 @@
 <div class="container">
    <div class="row">
       <div *ngFor="let currentSquare of childGridList" class="square" (click)="squareClicked(currentSquare)">
-          <p *ngIf="currentSquare.value!=9">{{currentSquare.value}}</p>
+          <p *ngIf="currentSquare.explored">{{currentSquare.value}}</p>
       </div>
    </div>
 </div>
