--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <h1>
   Minesweeper
 </h1>
-<app-make-grid [childGridList]="currentGrid" (clickSender)="squareToEdit($event)"></app-make-grid>
+<app-make-grid [childGridList]="currentGrid" (clickSender)="squareToEdit($event)" (rClickSender)="squareToFlag($event)"></app-make-grid>
