right click to explore around previously clicked squares attempted but not yet working

--- a/src/app/make-grid/make-grid.component.html
+++ b/src/app/make-grid/make-grid.component.html
@@ -1,6 +1,6 @@
 <div class="container">
    <div class="row">
-      <div *ngFor="let currentSquare of childGridList.sq;let i=index" [ngStyle]="renderSquare()" (click)="squareClicked(i)" (contextmenu)=onRightClick(currentSquare)>
+      <div *ngFor="let currentSquare of childGridList.sq;let i=index" [ngStyle]="renderSquare()" (click)="squareClicked(i)" (contextmenu)=onRightClick(i)>
           <div *ngIf="currentSquare.explored;else next">
               <div *ngIf="currentSquare.mine;else display">
                   <p><img src="../../assets/Gnome-gnomine.png"></p>
