rightclick explored to explore adjacent mostly working; bug that it gives 2xbombs boom alert upon mistake

--- a/src/app/make-grid/make-grid.component.html
+++ b/src/app/make-grid/make-grid.component.html
@@ -1,11 +1,11 @@
 <div class="container">
    <div class="row">
       <div *ngFor="let currentSquare of childGridList.sq;let i=index" [ngStyle]="renderSquare()" (click)="squareClicked(i)" (contextmenu)=onRightClick(i)>
-          <div *ngIf="currentSquare.explored;else next">
+          <div *ngIf="currentSquare.explored;else next" (contextmenu)=onRightClick(i)>
               <div *ngIf="currentSquare.mine;else display">
                   <p><img src="../../assets/Gnome-gnomine.png"></p>
               </div>
-              <ng-template #display><p>{{currentSquare.value}}</p></ng-template>
+              <ng-template #display ><p>{{currentSquare.value}}</p></ng-template>
           </div>
           <ng-template #next><p *ngIf="currentSquare.showFlag"><img src="../../assets/Minesweeper_flag.svg"></p></ng-template>
       </div>
