--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,3 +1,8 @@
 <p>
-  welcome works!
+  Please choose a grid size to play:
 </p>
+<form [formGroup]="form">
+  <input type="radio" formControlName="small" value="small" > Beginner : 9 by 9 grid, 10 mines<br>
+  <input type="radio" formControlName="med" value="med"> Intermediate : 16 by 16 grid, 40 mines<br>
+  <input type="radio" formControlName="large" value="large"> Advanced: 16 by 30 grid, 99 mines<br>
+</form>
