start move of grid creation to welcome screen, still buggy

--- a/src/app/play-game/play-game.component.html
+++ b/src/app/play-game/play-game.component.html
@@ -1,3 +1,1 @@
-<p>
-  play-game works!
-</p>
+<app-make-grid [childGridList]="currentGrid" (clickSender)="squareToEdit($event)" (rClickSender)="squareToFlag($event)"></app-make-grid>
