--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,4 @@
 </h1>
 <router-outlet></router-outlet>
 <app-welcome (emitGrid)="receiveGrid($event)"></app-welcome>
+<app-play-game [currentGrid]="currentGrid"></app-play-game>
