--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <h1>
   Minesweeper
 </h1>
-<router-outlet></router-outlet>
-<app-welcome (emitGrid)="receiveGrid($event)"></app-welcome>
+<app-make-grid [childGridList]="currentGrid" (clickSender)="squareToEdit($event)" (rClickSender)="squareToFlag($event)"></app-make-grid>
