--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <h1>
   Minesweeper
 </h1>
+<app-welcome (emitGrid)="receiveGrid($event)"></app-welcome>
 <app-make-grid [childGridList]="currentGrid" (clickSender)="squareToEdit($event)" (rClickSender)="squareToFlag($event)"></app-make-grid>
