--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 <h1>
   Minesweeper
 </h1>
-<app-welcome (emitGrid)="receiveGrid($event)"></app-welcome>
-<app-make-grid [childGridList]="currentGrid" (clickSender)="squareToEdit($event)" (rClickSender)="squareToFlag($event)"></app-make-grid>
+<form *ngIf="gameOverScreen">
+  <button type="submit" class="btn btn-success" (click)="startNewGame()"><h5>Start a new game!</h5></button>
+</form>
+
+<app-welcome *ngIf="!currentGrid.playing" (emitGrid)="receiveGrid($event)"></app-welcome>
+<app-make-grid *ngIf="currentGrid.playing" [childGridList]="currentGrid" (clickSender)="squareToEdit($event)" (rClickSender)="squareToFlag($event)"></app-make-grid>
