--- a/src/app/play-game/play-game.component.html
+++ b/src/app/play-game/play-game.component.html
@@ -1,1 +1,1 @@
-<app-make-grid [childGridList]="currentGrid" (clickSender)="squareToEdit($event)" (rClickSender)="squareToFlag($event)"></app-make-grid>
+<p (clickSender)="WhoIsPlaying($event)">Please enter your name to use for the </p>
