--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -7,3 +7,6 @@
   <input type="radio" formControlName="gridsize" value="large"> Advanced: 16 by 30 grid, 99 mines<br>
   <button type="submit" class="btn" (click)="startGame(form.value)">Start a game!</button>
 </form>
+<p>
+  Or, leave a name to track your success:
+</p>
