--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,3 +7,4 @@
 
 <app-welcome *ngIf="!currentGrid.playing" (emitGrid)="receiveGrid($event)"></app-welcome>
 <app-make-grid *ngIf="currentGrid.playing" [childGridList]="currentGrid" (clickSender)="squareToEdit($event)" (rClickSender)="squareToFlag($event)"></app-make-grid>
+<app-list-users *ngIf="!currentGrid.playing" (clickSender)="chooseUser($event)"></app-list-users>
