adds logout feature

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,6 +13,9 @@
     Right click an unexplored square to mark it as believed to be mined.<br>
     Right click an explored square to explore all unmarked squares around it.</p>
   </div>
-  <app-welcome *ngIf="haveAUser" (emitGrid)="receiveGrid($event)"></app-welcome>
   <app-list-users *ngIf="!haveAUser" (clickSender)="chooseUser($event)"></app-list-users>
+  <app-welcome *ngIf="haveAUser" [childUser]="currentUser" (emitGrid)="receiveGrid($event)"></app-welcome>
+  <div id=logout *ngIf="haveAUser">
+    <button type="submit" class="btn btn-secondary" (click)="logOut()">Log out user</button>
+  </div>
 </div>
