--- a/src/app/list-users/list-users.component.html
+++ b/src/app/list-users/list-users.component.html
@@ -1,17 +1,13 @@
 <div id=userList>
-  <h4> Click your user name to get started, or add your name in the form below:</h4>
+  <h2> Click your user name to get started!</h2>
   <ul>
     <ul *ngFor="let currentUser of users | async" (click)="nameClicked(currentUser)"><h4>{{currentUser.name}}</h4>
-      <li>Beginner: {{currentUser.won[0]}} games won out of {{currentUser.started[0]}}</li>
-      <li>Intermediate: {{currentUser.won[1]}} games won out of {{currentUser.started[1]}}</li>
-      <li>Advanced: {{currentUser.won[2]}} games won out of {{currentUser.started[2]}}</li>
     </ul>
   </ul>
 </div>
 <div id=newUserForm>
-  <h3>Add New User</h3>
+  <h2>Or, Add a New User:</h2>
   <div>
-    <label>Name:</label>
     <br>
     <input #newName>
   </div>
