reformat user selection screen

--- a/src/app/list-users/list-users.component.css
+++ b/src/app/list-users/list-users.component.css
@@ -1,6 +1,8 @@
 #newUserForm {
-  text-align: center;
+  padding-right: 10%;
+  text-align: right;
 }
 #userList {
   padding-left: 10%;
+  float: left;
 }
